:heavy_plus_sign: Added and verified new API endpoint for map-changing function.
