# swagger_server/swagger/swagger.yaml
@@ -79,6 +79,27 @@ paths:
               schema:
                 $ref: '#/components/schemas/Twist'
       x-openapi-router-controller: swagger_server.controllers.user_controller
+  /robot/change_map:
+    post:
+      tags:
+      - user
+      summary: Request change robot map.
+      description: This can only be done by the logged in user.
+      operationId: change_map
+      requestBody:
+        description: Request Robot Map to be changed by publishing onto /change_map ROS 1 topic.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MapRequest'
+      responses:
+        default:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MapRequest'
+      x-openapi-router-controller: swagger_server.controllers.user_controller
   /robot/status:
     get:
       tags:
@@ -198,6 +219,14 @@ components:
           example: 0.0
       xml:
         name: twist
+    MapRequest:
+      type: object
+      properties:
+        map_name:
+          type: string
+          example: "L1"
+      xml:
+        name: ros_string
     ROS1String:
       type: object
       properties:
